# deepin-app-store

./: .clog.toml  .gitignore  .gitlab-ci.yml  .project  CHANGELOG.md  CMakeLists.txt  README.md
.tx/: config
debian/: changelog  control  deepin-app-store.postinst  deepin-app-store.postrm  deepin-app-store.preinst  deepin-app-store.triggers  rules
src/: CMakeLists.txt
src/app/: deepin_app_store.cpp  deepin_appstore.cpp  pkg_cache.cpp  pkg_cache_implement.cpp  pkg_cache_implement.h  tcp_client.cpp  tcp_client.h  tool.cpp
src/base/: consts.cpp  consts.h  iapppaycall.h  launcher.cpp  launcher.h  sysinfo.cpp
src/daemon/: deb.go  main.cpp  main.go  metadata.go  querydesktop.go  querydesktop_deb.go  querydesktop_utils.go  settings.go  settings_ifc.go
src/daemon/config/: 99appstore.conf  dpkg-post-hook  package_cache  pkg-config-hook-config
src/daemon/dbus/: daemondbus.h
src/daemon/dbus/dbus_variant/: installed_app_info.h
src/daemon/pkgmanager/: lastorejobmanager.cpp  lastorejobmanager.h  lastorejobservice.cpp  lastorejobservice.h  metadatamanager.cpp  metadatamanager.h  pkgcachemanager.cpp  pkgcachemanager.h  pkgmanagerservice.cpp  pkgmanagerservice.h  tcp_server.cpp  tcp_server.h
src/daemon/settings/: settingservice.cpp  settingservice.h
src/dbus/: com.deepin.AppStore.Backend.Deb.xml  com.deepin.AppStore.Daemon.service  com.deepin.AppStore.service  dbus_consts.cpp  dbus_consts.h  lastore_deb_interface.h  lastore_job_interface.h  sys_lastore_job_interface.cpp  sys_lastore_job_interface.h
src/dbus/dbus_variant/: app_metadata.h  app_version.cpp  app_version.h  installed_app_info.cpp  installed_app_info.h  installed_app_timestamp.h
src/resources/: CMakeLists.txt  appstore-keyring.gpg  appstore.gpg  appstore.list  deepin-app-store.desktop  deepin-appstore.desktop  images.cpp  settings.ini.default
src/resources/settings/: settings-server.ini
src/resources/themes/: themes.qrc
src/resources/themes/dark/: dstore--ImageViewer.theme  dstore--TitleBar.theme
src/resources/themes/light/: dstore--ImageViewer.theme  dstore--TitleBar.theme
src/services/: account_manager.cpp  account_manager.h  dbus_manager.cpp  dbus_manager.h  rcc_scheme_handler.cpp  rcc_scheme_handler.h  settings_manager.cpp  settings_manager.h  store_daemon_manager.cpp  store_daemon_manager.h
src/services/package/: apt_package_manager.cpp  apt_util_worker.cpp  package_manager.cpp  package_manager.h  package_manager_interface.cpp  package_manager_interface.h
src/ui/: web_window.cpp  web_window.h
src/ui/channel/: account_proxy.cpp  account_proxy.h  menu_proxy.h  search_proxy.h  settings_proxy.cpp  settings_proxy.h  store_daemon_proxy.cpp  store_daemon_proxy.h  websocket_proxy.cpp  websocket_proxy.h
src/ui/widgets/: image_viewer.cpp  image_viewer.h  search_completion_window.cpp  title_bar.cpp  title_bar.h  title_bar_menu.cpp  title_bar_menu.h  user_menu.cpp  user_menu.h
translations/: Makefile  deepin-app-store.ts  deepin-app-store_ar.ts  deepin-app-store_ast.ts  deepin-app-store_az.ts  deepin-app-store_bg.ts  deepin-app-store_bo.ts  deepin-app-store_br.ts  deepin-app-store_ca.ts  deepin-app-store_cs.ts  deepin-app-store_da.ts  deepin-app-store_de.ts  deepin-app-store_en_AU.ts  deepin-app-store_es.ts  deepin-app-store_es_419.ts  deepin-app-store_et.ts  deepin-app-store_fa.ts  deepin-app-store_fi.ts  deepin-app-store_fr.ts  deepin-app-store_gl_ES.ts  deepin-app-store_hi_IN.ts  deepin-app-store_hr.ts  deepin-app-store_hu.ts  deepin-app-store_id.ts  deepin-app-store_it.ts  deepin-app-store_ja.ts  deepin-app-store_ko.ts  deepin-app-store_lt.ts  deepin-app-store_ms.ts  deepin-app-store_ne.ts  deepin-app-store_nl.ts  deepin-app-store_pl.ts  deepin-app-store_pt.ts  deepin-app-store_pt_BR.ts  deepin-app-store_ro.ts  deepin-app-store_ru.ts  deepin-app-store_sk.ts  deepin-app-store_sq.ts  deepin-app-store_sr.ts  deepin-app-store_th.ts  (+17 more)
translations/desktop/: desktop_ar.ts  desktop_bo.ts  desktop_br.ts  desktop_cs.ts  desktop_de.ts  desktop_es.ts  desktop_fi.ts  desktop_gl_ES.ts  desktop_hi_IN.ts  desktop_hr.ts  desktop_hu.ts  desktop_ja.ts  desktop_ko.ts  desktop_nl.ts  desktop_pt.ts  desktop_pt_BR.ts  desktop_sq.ts  desktop_sv.ts  desktop_ug.ts  desktop_vi.ts  desktop_zh_TW.ts
